--- a/pages/homepage/homepage.html
+++ b/pages/homepage/homepage.html
@@ -58,11 +58,10 @@
             </div>
 
             <div class="right">
-                <ion-icon name="logo-instagram"></ion-icon>
-                
+                <img src = "icons/logo-instagram.svg" alt="My Happy SVG"/>
+                <img src = "icons/logo-facebook.svg" alt="My Happy SVG"/>
+                <img src = "icons/logo-twitter.svg" alt="My Happy SVG"/>
             </div>
-
-
         </footer>
     </body>
 </html>
