--- a/pages/template.html
+++ b/pages/template.html
@@ -1,8 +1,5 @@
-<?php
-    require 'helper/database.php';
-    # require 'helper/logincheck.php;       # if page is login-guarded
-    # require_once 'helper/<php_function_package>.php;      # for importing any php helper function files
-?>
+
+<!-- NOTE: login checking must be done via JS-PHP interface now -->
 
 <!DOCTYPE html>
 <html lang="en">
