--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -17,8 +17,8 @@
         </nav>
         <section class="landing">
             <img src="https://lh5.googleusercontent.com/p/AF1QipNJfqRDdl7U1HH1ekPl3tP1Wu5MrkSlg-PJscEX=w1080-k-no" alt="head">
-            <h1>Raise money for charity for every donation made</h1>
-            <h4>It's free and incredibly easy.</h4>
+            <h2>Raise money for charity for every donation made</h2>
+            <h3>It's free and incredibly easy.</h3>
         </section>
 
         <section class="marketing">
@@ -27,10 +27,10 @@
             </div>
 
             <div class="second">
-                <h1>Support your favorite cause, effortlessly</h1>
+                <h2>Support your favorite cause, effortlessly</h2>
                 <p>Donate unwanted items for tax deduction and
                 help</p>
-                <p class="changing">
+                <p class="body5 changing">
                     plant trees
                     prevent diseases
                     send emergency aids
@@ -43,9 +43,9 @@
         </section>
 
         <section class="join">
-            <h1>We show our work</h1>
-            <p>We know that trust must be earned. That's why the code for our webpage and dashboard are open source.</p>
-            <p> Even better, we publish quarterly financial reports, so you can see exactly how much we give to each charity and what our other costs are.</p>
+            <h2>We show our work</h2>
+            <p class="body4">We know that trust must be earned. That's why the code for our webpage and dashboard are open source.</p>
+            <p class="body4"> Even better, we publish quarterly financial reports, so you can see exactly how much we give to each charity and what our other costs are.</p>
             <button type="button">Sign Up</button>
         </section>
 
