--- a/pages/login.html
+++ b/pages/login.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Sign In</title>
   </head>
   <body>
+    <h1>Sign In</h1>
     <form action="/login.php">
       <label for="email">Email:</label><br />
-      <input type="text" id="email" name="email"/><br />
+      <input type="text" id="email" name="email" /><br />
       <label for="password">Password:</label><br />
-      <input type="text" id="password" name="password"/><br /><br />
-      <input type="submit" value="Log In" />
+      <input type="text" id="password" name="password" /><br /><br />
+      <input type="submit" value="Sign In" />
     </form>
+    <p>
+      Don't have an account with us?
+      <a href="register.html">Create an account</a>
+    </p>
   </body>
 </html>
