--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -9,17 +9,15 @@
   <body>
     <div class="nav">
       <ul>
-        <li>Dashboard</li>
-        <li>Upload Receipt</li>
-        <li>Donate Donut</li>
-        <li>My Rewards</li>
-        <li>Account</li>
+        <a href = "dashboard.html">Dashboard</li>
+        <a href = "#" >Upload Receipt</li>
+        <a href = "#">Donate Donut</a>
+        <a href = "#">My Rewards</li>
+        <a href = "#">Account</li>
       </ul>
     </div>
 
     <div id="donation-cards">
-        
-
     </div>
 
     <div id="total-donations">
