--- a/pages/educationpage.html
+++ b/pages/educationpage.html
@@ -15,10 +15,41 @@
                     <button type="button">Sign Up</button>
             </div>
         </nav>
-        <section>
 
-        </section>>
+        <h1 id="educate">How to Get Tax Deductions on Donations</h1>
 
+       <div class="intro">
+            <img src="https://lh5.googleusercontent.com/p/AF1QipNJfqRDdl7U1HH1ekPl3tP1Wu5MrkSlg-PJscEX=w1080-k-no" alt="head">
+            <p class="body6">You may be able to claim a deduction on your federal taxes if you donated to a <a href="https://apps.irs.gov/app/eos/">501(c)3 organization</a>. To deduct donations, you must file a <a href="https://www.irs.gov/forms-pubs/about-schedule-a-form-1040">Schedule A</a> with your tax form. With proper documentation, you can claim vehicle or cash donations. Or, if you want to deduct a non-cash donation, you'll also have to fill out <a href="https://www.irs.gov/forms-pubs/about-form-8283">Form 8283</a>.
+            </p>
+       </div>
+
+       <div class="info2">
+            <h2>How Much Can You Deduct?</h2>
+            <p class="body6">The amount of money that you can deduct on your taxes may not be equal to the total amount of your donations.
+            </p>
+            <ul>
+                <li>If you donate non-cash items, you can claim the fair market value of the items on your taxes. </li>
+
+                <li>If you donated a vehicle, your deduction depends on if the organization keeps the car or sells it at an auction. "<a href="https://www.irs.gov/pub/irs-pdf/p4303.pdf">A Donor’s Guide to Vehicle Donation</a> (PDF, <a href="https://get.adobe.com/reader/">Download Adobe Reader</a>)” explains how your deduction is determined. </li>
+
+                <li>If you received a gift or ticket to an event, you can only <a href="https://www.irs.gov/charities-non-profits/charitable-organizations/charitable-contributions-quid-pro-quo-contributions">deduct the amount that exceeds the value of the gift or ticket</a>. </li>
+            </ul>
+            <p class="body6"><strong></strong>Note: Limits on cash and non-cash charitable donations have increased or been suspended. Learn more about <a href="https://www.irs.gov/faqs/itemized-deductions-standard-deduction/gifts-charitable-contributions">charitable deductions in 2021</a>.
+            </p>
+       </div>
+
+       <div class="info3">
+            <h2>Keep Records of Charitable Donations</h2>
+            <p class="body6">To claim deductions, it’s important to keep records of your donations to charities. You may not have to send these documents with your tax returns, but they are good to keep with your other tax records. Common documents include:</p>
+            <ul>
+                <li><a href="https://www.irs.gov/faqs/itemized-deductions-standard-deduction/gifts-charitable-contributions">Written acknowledgment</a> of vehicle donations </li>
+
+                <li><a href="https://www.irs.gov/charities-non-profits/charitable-organizations/charitable-contributions-written-acknowledgments">Bank records or a written communication</a> for cash donations </li>
+
+                <li><a href="https://www.irs.gov/forms-pubs/about-form-8283">Form 8283</a> for non-cash deductions</li>
+            </ul>
+       </div>
 
         <footer>
             <div class="left">
@@ -26,11 +57,10 @@
                 <p>Privacy policy </p>
                 <p>Terms of service</p>
             </div>
-
             <div class="right">
-                <img src = "pages/icons/logo-instagram.svg" alt="My Happy SVG"/>
-                <img src = "pages/icons/logo-facebook.svg" alt="My Happy SVG"/>
-                <img src = "pages/icons/logo-twitter.svg" alt="My Happy SVG"/>
+                <img src = "..'images/icons/logo-instagram.svg" alt="My Happy SVG"/>
+                <img src = "../images/icons/logo-facebook.svg" alt="My Happy SVG"/>
+                <img src = "../images/icons/logo-twitter.svg" alt="My Happy SVG"/>
             </div>
         </footer>
     </body>
