--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -23,7 +23,8 @@
 
         <section class="marketing">
             <div class="first">
-                
+                <h2>Learn ways to sustainbilty get rid of old stuff</h2>
+                <p class="body5">Help find new life for your olde stuff while also getting a tax deduction!</p>
             </div>
 
             <div class="second">
@@ -58,9 +59,9 @@
             </div>
 
             <div class="right">
-                <img src = "icons/logo-instagram.svg" alt="My Happy SVG"/>
-                <img src = "icons/logo-facebook.svg" alt="My Happy SVG"/>
-                <img src = "icons/logo-twitter.svg" alt="My Happy SVG"/>
+                <img src = "..'images/icons/logo-instagram.svg" alt="My Happy SVG"/>
+                <img src = "../images/icons/logo-facebook.svg" alt="My Happy SVG"/>
+                <img src = "../images/icons/logo-twitter.svg" alt="My Happy SVG"/>
             </div>
         </footer>
     </body>
