--- a/pages/howitworks.html
+++ b/pages/howitworks.html
@@ -16,8 +16,33 @@
             </div>
         </nav>
 
-        <section class="head">
-            <h1>Raise money for charity in four steps</h1>
+        <h1 id="howitworks">Raise money for charity in four steps</h1>
+
+        <section class="steps">
+            <div class="1">
+                <h1>1</h1>
+                <p class="body5">Sign up and create a profile</p>
+                <img src="https://lh5.googleusercontent.com/p/AF1QipNJfqRDdl7U1HH1ekPl3tP1Wu5MrkSlg-PJscEX=w1080-k-no" alt="head">
+            </div>
+
+            <div class="2">
+                <img src="https://lh5.googleusercontent.com/p/AF1QipNJfqRDdl7U1HH1ekPl3tP1Wu5MrkSlg-PJscEX=w1080-k-no" alt="head">
+                <h1>2</h1>
+                <p class="body5">Donate anything you don’t want, and recieve donation receipt</p>
+            </div>
+
+            <div class="3">
+                <h1>3</h1>
+                <p class="body5">Upload donation receipt for donuts</p>
+                <img src="https://lh5.googleusercontent.com/p/AF1QipNJfqRDdl7U1HH1ekPl3tP1Wu5MrkSlg-PJscEX=w1080-k-no" alt="head">
+            </div>
+
+            <div class="1">
+                <img src="https://lh5.googleusercontent.com/p/AF1QipNJfqRDdl7U1HH1ekPl3tP1Wu5MrkSlg-PJscEX=w1080-k-no" alt="head">
+                <h1>4</h1>
+                <p class="body5">Donate donuts to chariety of your choice!</p>
+            </div>
+            
         </section>
 
         <footer>
@@ -26,11 +51,10 @@
                 <p>Privacy policy </p>
                 <p>Terms of service</p>
             </div>
-
             <div class="right">
-                <img src = "icons/logo-instagram.svg" alt="My Happy SVG"/>
-                <img src = "icons/logo-facebook.svg" alt="My Happy SVG"/>
-                <img src = "icons/logo-twitter.svg" alt="My Happy SVG"/>
+                <img src = "..'images/icons/logo-instagram.svg" alt="My Happy SVG"/>
+                <img src = "../images/icons/logo-facebook.svg" alt="My Happy SVG"/>
+                <img src = "../images/icons/logo-twitter.svg" alt="My Happy SVG"/>
             </div>
         </footer>
     </body>
