--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -20,12 +20,35 @@
     <div id="donation-cards">
     </div>
 
-    <div id="total-donations">
+
+    <div id="donut-balance">
 
     </div>
 
-    <div id="leaderboard">
+    <div id="total-donations">
+        <p> $1,234,567,890 </p>
+        <p> This is how much money our community has raised for charity! </p>
+    </div>
 
+    <div id="leaderboard">
+        <h2>Leaderboard</h2>
+        <ul>
+            <li>
+                <div class="leaderboard_num">1</div>
+            </li>
+            <li>
+                <div class="leaderboard_num">2</div>
+            </li>
+            <li>
+                <div class="leaderboard_num">3</div>
+            </li>
+            <li>
+                <div class="leaderboard_num">4</div>
+            </li>
+            <li>
+                <div class="leaderboard_num">5</div>
+            </li>
+        </ul>
     </div>
 
     <script src="js/dashboard.js"></script>
