--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -9,11 +9,11 @@
   <body>
     <div class="nav">
       <ul>
-        <a href = "dashboard.html">Dashboard</li>
-        <a href = "#" >Upload Receipt</li>
+        <a href = "dashboard.html">Dashboard</a>
+        <a href = "#" >Upload Receipt</a>
         <a href = "#">Donate Donut</a>
-        <a href = "#">My Rewards</li>
-        <a href = "#">Account</li>
+        <a href = "#">My Rewards</a>
+        <a href = "#">Account</a>
       </ul>
     </div>
 
