--- a/pages/login.html
+++ b/pages/login.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Sign In</h1>
-    <form action="/login.php">
+    <form action="PHP/login.php">
       <label for="email">Email:</label><br />
       <input type="text" id="email" name="email" /><br />
       <label for="password">Password:</label><br />
