--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -51,6 +51,6 @@
         </ul>
     </div>
 
-    <script src="js/dashboard.js"></script>
+    <script src="../js/dashboard.js"></script>
   </body>
 </html>
