--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -7,13 +7,23 @@
     <title>Dashboard</title>
   </head>
   <body>
-    <div class="nav">
+    <div class="side-nav">
       <ul>
-        <a href = "dashboard.html">Dashboard</a>
-        <a href = "#" >Upload Receipt</a>
-        <a href = "#">Donate Donut</a>
-        <a href = "#">My Rewards</a>
-        <a href = "#">Account</a>
+        <li>
+          <a href = "dashboard.html"><h5>Dashboard</h5></a>
+        </li>
+        <li>
+          <a href = "#" ><h5>Upload Receipts</h5></a>
+        </li>
+        <li>
+          <a href = "#"><h5>Donate Donuts</h5></a>
+        </li>
+        <li>
+          <a href = "#"><h5>My Rewards</h5></a>
+        </li>
+        <li>
+          <a href = "PHP/profile.php"><h5>Profile</h5></a>
+        </li>
       </ul>
     </div>
 
