--- a/pages/howitworks.html
+++ b/pages/howitworks.html
@@ -52,7 +52,7 @@
                 <p>Terms of service</p>
             </div>
             <div class="right">
-                <img src = "..'images/icons/logo-instagram.svg" alt="My Happy SVG"/>
+                <img src = "../images/icons/logo-instagram.svg" alt="My Happy SVG"/>
                 <img src = "../images/icons/logo-facebook.svg" alt="My Happy SVG"/>
                 <img src = "../images/icons/logo-twitter.svg" alt="My Happy SVG"/>
             </div>
