--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Dashboard</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/dashboard.css">
+
+
   </head>
   <body>
     <div class="side-nav">
@@ -30,36 +35,42 @@
     <div id="donation-cards">
     </div>
 
+    <section id="dashboard-right">
 
-    <div id="donut-balance">
+      <div id="donut-balance">
 
-    </div>
+      </div>
+  
+      <div id="total-donations">
+          <p> $1,234,567,890 </p>
+          <p> This is how much money our community has raised for charity! </p>
+      </div>
+  
+      <div id="leaderboard">
+          <h2>Leaderboard</h2>
+          <ul>
+              <li>
+                  <div class="leaderboard_num">1</div>
+              </li>
+              <li>
+                  <div class="leaderboard_num">2</div>
+              </li>
+              <li>
+                  <div class="leaderboard_num">3</div>
+              </li>
+              <li>
+                  <div class="leaderboard_num">4</div>
+              </li>
+              <li>
+                  <div class="leaderboard_num">5</div>
+              </li>
+          </ul>
+      </div>
 
-    <div id="total-donations">
-        <p> $1,234,567,890 </p>
-        <p> This is how much money our community has raised for charity! </p>
-    </div>
+    </section>
 
-    <div id="leaderboard">
-        <h2>Leaderboard</h2>
-        <ul>
-            <li>
-                <div class="leaderboard_num">1</div>
-            </li>
-            <li>
-                <div class="leaderboard_num">2</div>
-            </li>
-            <li>
-                <div class="leaderboard_num">3</div>
-            </li>
-            <li>
-                <div class="leaderboard_num">4</div>
-            </li>
-            <li>
-                <div class="leaderboard_num">5</div>
-            </li>
-        </ul>
-    </div>
+
+
 
     <script src="../js/dashboard.js"></script>
   </body>
