button class inclusion

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -12,13 +12,14 @@
                     <a href="#">Overview</a>
                     <a href="#">How it Works</a>
                     <a href="#">Tax Deduction</a>
-                    <button type="button">Sign Up</button>
+                    <button type="button" class="signbtn-square">Sign In</button>
             </div>
         </nav>
         <section class="landing">
             <img src="https://lh5.googleusercontent.com/p/AF1QipNJfqRDdl7U1HH1ekPl3tP1Wu5MrkSlg-PJscEX=w1080-k-no" alt="head">
             <h2>Raise money for charity for every donation made</h2>
             <h3>It's free and incredibly easy.</h3>
+            <button type="button" class="signbtn-square">Sign Up</button>
         </section>
 
         <section class="marketing">
@@ -47,7 +48,7 @@
             <h2>We show our work</h2>
             <p class="body4">We know that trust must be earned. That's why the code for our webpage and dashboard are open source.</p>
             <p class="body4"> Even better, we publish quarterly financial reports, so you can see exactly how much we give to each charity and what our other costs are.</p>
-            <button type="button">Sign Up</button>
+            <button type="button" class="signbtn-square">Sign Up</button>
         </section>
 
 
