--- a/pages/educationpage.html
+++ b/pages/educationpage.html
@@ -12,7 +12,7 @@
                     <a href="#">Overview</a>
                     <a href="#">How it Works</a>
                     <a href="#">Tax Deduction</a>
-                    <button type="button">Sign Up</button>
+                    <button type="button" class="signinbtn-square">Sign In</button>
             </div>
         </nav>
 
