--- a/pages/template.html
+++ b/pages/template.html
@@ -4,7 +4,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <meta charset="utf8">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ecodona - Donate for Good</title>
     </head>
     <body>
@@ -17,7 +19,7 @@
                 <a href="TODO: howitworks">How It Works</a>
                 <a href="TODO: taxdeduction">Tax Deduction</a>
             </div>
-            <input type="button" id="signin-button" value="Sign In">
+            <input type="button" id="signbtn-square" value="Sign In">
         </nav>
         <section>
 
