--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -32,8 +32,11 @@
       </ul>
     </div>
 
-    <div id="donation-cards">
-    </div>
+    <section id="dashboard-middle">
+      <div id="donation-cards">
+      </div>
+    </section>
+
 
     <section id="dashboard-right">
 
