--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -21,7 +21,7 @@
           <a href = "dashboard.html"><h5>Dashboard</h5></a>
         </li>
         <li>
-          <a href = "#" ><h5>Upload Receipts</h5></a>
+          <a href = "upload.html" ><h5>Upload Receipts</h5></a>
         </li>
         <li>
           <a href = "#"><h5>Donate Donuts</h5></a>
