--- a/pages/upload.html
+++ b/pages/upload.html
@@ -6,7 +6,8 @@
     <head>
     <meta charset="utf8">
         <title>ecodona - Donate for Good</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="../css/user.css" />
     </head>
     <body>
         <div class="side-nav">
