--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -7,6 +7,7 @@
 
     <title>Dashboard</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/user.css" />
     <link rel="stylesheet" href="../css/dashboard.css" />
   </head>
   <body>
