--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -38,7 +38,13 @@
         </section>
 
         <section id="dashboard-right">
-          <div id="donut-balance" class="card"></div>
+          <div id="donut-balance-container" class="card">
+            <div>
+              <img src="../images/icons/ecodona_icon.svg">
+              <h4 id = "donut-balance"></h4>
+            </div>
+            <h6>Donut Balance</h6>
+          </div>
 
           <div id="total-donations" class="card">
             <p>$1,234,567,890</p>
