--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/dashboard.css" />
   </head>
   <body>
-    <div id="dashboard-body">
+    <div class="content-body">
       <div class="side-nav">
         <ul>
           <li>
@@ -32,7 +32,7 @@
         </ul>
       </div>
 
-      <div id="content">
+      <div class="content">
         <section id="dashboard-middle">
           <div id="donation-cards"></div>
         </section>
