charity + rewards html

--- a/pages/charity.html
+++ b/pages/charity.html
@@ -31,8 +31,72 @@
               </li>
             </ul>
           </div>
-        <section>
-
+        <section id="content">
+          <div class="intro">
+            <h3>Donate Your Donuts</h3>
+          </div>
+          <div class="charities-wrapper">
+            <div class="card">
+              <div class="card-img">
+                <img src="TODO: ../images/charity_images/img.png">
+              </div>
+              <div class="h8">
+                Human Watch Rights
+              </div>
+              <p class="body2">
+                An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
+              </p>
+              <div class="card-btns">
+                <button type="button" class="primarybtn">Donate</button>
+                <button type="button" class="secondarybtn">Details</button>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-img">
+                <img src="TODO: ../images/charity_images/img.png">
+              </div>
+              <div class="h8">
+                Human Watch Rights
+              </div>
+              <p class="body2">
+                An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
+              </p>
+              <div class="card-btns">
+                <button type="button" class="primarybtn">Donate</button>
+                <button type="button" class="secondarybtn">Details</button>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-img">
+                <img src="TODO: ../images/charity_images/img.png">
+              </div>
+              <div class="h8">
+                Human Watch Rights
+              </div>
+              <p class="body2">
+                An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
+              </p>
+              <div class="card-btns">
+                <button type="button" class="primarybtn">Donate</button>
+                <button type="button" class="secondarybtn">Details</button>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-img">
+                <img src="TODO: ../images/charity_images/img.png">
+              </div>
+              <div class="h8">
+                Human Watch Rights
+              </div>
+              <p class="body2">
+                An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
+              </p>
+              <div class="card-btns">
+                <button type="button" class="primarybtn">Donate</button>
+                <button type="button" class="secondarybtn">Details</button>
+              </div>
+            </div>
+          </div>
         </section>
         <footer>
 
