--- a/pages/rewards.html
+++ b/pages/rewards.html
@@ -31,8 +31,57 @@
               </li>
             </ul>
           </div>
-        <section>
-
+        <section class="content">
+          <div class="intro">
+            <h3>My Rewards</h3>
+          </div>
+          <div class="rewards-wrapper">
+            <div class="reward">
+              <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
+              <div>
+                <h3>Human Watch Rights Milestone 3</h3>
+                <p class="body10">Phone Case</p>
+              </div>
+              <p class="italicgreenbig">In-Progress</p>
+              <img src="TODO: ../images/icons/rightarrow.png" class="reward-arrow">
+            </div>
+            <div class="reward">
+              <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
+              <div>
+                <h3>water.org Milestone 1</h3>
+                <p class="body10">water.org Hydroflask</p>
+              </div>
+              <p class="italicgreenbig">Shipped</p>
+              <img src="TODO: ../images/icons/rightarrow.png" class="reward-arrow">
+            </div>
+            <div class="reward">
+              <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
+              <div>
+                <h3>Human Watch Rights Milestone 2</h3>
+                <p class="body10">Swag Stickers</p>
+              </div>
+              <p class="italicgreenbig">Delivered</p>
+              <img src="TODO: ../images/icons/rightarrow.png" class="reward-arrow">
+            </div>
+            <div class="reward">
+              <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
+              <div>
+                <h3>Educate! Milestone 5</h3>
+                <p class="body10">Keychron MX Switch</p>
+              </div>
+              <p class="italicgreenbig">Delivered</p>
+              <img src="TODO: ../images/icons/rightarrow.png" class="reward-arrow">
+            </div>
+            <div class="reward">
+              <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
+              <div>
+                <h3>Human Watch Rights Milestone 1</h3>
+                <p class="body10">Sunglasses</p>
+              </div>
+              <p class="italicgreenbig">Delivered</p>
+              <img src="TODO: ../images/icons/rightarrow.png" class="reward-arrow">
+            </div>
+          </div>
         </section>
         <footer>
 
