--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -49,8 +49,8 @@
           </div>
 
           <div id="total-donations" class="card">
-            <p>$1,234,567,890</p>
-            <p>This is how much money our community has raised for charity!</p>
+            <h3>$1,234,567,890</h3>
+            <p class="body2">This is how much money our community has raised for charity!</p>
           </div>
 
           <div id="leaderboard" class="card">
@@ -58,6 +58,7 @@
             <ul>
               <li>
                 <div class="leaderboard_num">1</div>
+
               </li>
               <li>
                 <div class="leaderboard_num">2</div>
