--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -41,7 +41,7 @@
 
         <section id="dashboard-right">
           <div id="donut-balance-container" class="card">
-            <div>
+            <div id = "donut-balance-and-icon">
               <img src="../images/icons/ecodona_icon.svg">
               <h4 id = "donut-balance"></h4>
             </div>
