--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -57,20 +57,30 @@
             <h4>Leaderboard</h4>
             <ul>
               <li>
-                <div class="leaderboard_num">1</div>
+                <div class="leaderboard_num">
+                  <p class="body1">1</p>
+                  <p class="body1">Helen</p>
+
+                </div>
 
               </li>
               <li>
-                <div class="leaderboard_num">2</div>
+                <div class="leaderboard_num">
+                  <p class="body1">2</p>
+                  <p class="body1">Hanna</p>
+                </div>
               </li>
               <li>
-                <div class="leaderboard_num">3</div>
+                <div class="leaderboard_num">
+                  <p class="body1">3</p>
+                  <p class="body1">Brendan</p>
+                </div>
               </li>
               <li>
-                <div class="leaderboard_num">4</div>
-              </li>
-              <li>
-                <div class="leaderboard_num">5</div>
+                <div class="leaderboard_num">
+                  <p class="body1">4</p>
+                  <p class="body1">Chelsea</p>
+                </div>
               </li>
             </ul>
           </div>
