--- a/pages/rewards.html
+++ b/pages/rewards.html
@@ -8,6 +8,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ecodona - Donate for Good</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/style.css" />
         <link rel="stylesheet" href="../css/user.css" />
     </head>
@@ -32,18 +35,18 @@
             </ul>
           </div>
         <section class="content">
-          <div class="intro">
-            <h3>My Rewards</h3>
-          </div>
           <div class="rewards-wrapper">
+            <div class="intro">
+              <h3>My Rewards</h3>
+            </div>
             <div class="reward">
               <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
               <div>
-                <h3>Human Watch Rights Milestone 3</h3>
+                <h3>Eye Watch Milestone 2</h3>
                 <p class="body10">Phone Case</p>
               </div>
               <p class="italicgreenbig">In-Progress</p>
-              <img src="TODO: ../images/icons/rightarrow.png" class="reward-arrow">
+              <img src="../images/icons/rightarrow.png" class="reward-arrow">
             </div>
             <div class="reward">
               <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
@@ -52,16 +55,16 @@
                 <p class="body10">water.org Hydroflask</p>
               </div>
               <p class="italicgreenbig">Shipped</p>
-              <img src="TODO: ../images/icons/rightarrow.png" class="reward-arrow">
+              <img src="../images/icons/rightarrow.png" class="reward-arrow">
             </div>
             <div class="reward">
               <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
               <div>
-                <h3>Human Watch Rights Milestone 2</h3>
-                <p class="body10">Swag Stickers</p>
+                <h3>Sustains Milestone 3</h3>
+                <p class="body10">Squash Seeds</p>
               </div>
               <p class="italicgreenbig">Delivered</p>
-              <img src="TODO: ../images/icons/rightarrow.png" class="reward-arrow">
+              <img src="../images/icons/rightarrow.png" class="reward-arrow">
             </div>
             <div class="reward">
               <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
@@ -70,16 +73,16 @@
                 <p class="body10">Keychron MX Switch</p>
               </div>
               <p class="italicgreenbig">Delivered</p>
-              <img src="TODO: ../images/icons/rightarrow.png" class="reward-arrow">
+              <img src="../images/icons/rightarrow.png" class="reward-arrow">
             </div>
             <div class="reward">
               <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
               <div>
-                <h3>Human Watch Rights Milestone 1</h3>
-                <p class="body10">Sunglasses</p>
+                <h3>SoilEarth Milestone 5</h3>
+                <p class="body10">Gardening Gloves</p>
               </div>
               <p class="italicgreenbig">Delivered</p>
-              <img src="TODO: ../images/icons/rightarrow.png" class="reward-arrow">
+              <img src="../images/icons/rightarrow.png" class="reward-arrow">
             </div>
           </div>
         </section>
