--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -66,7 +66,7 @@
                   <p class="body1">1</p>
                   <p class="body1">Brendan</p>
                   <img src="../images/icons/ecodona_icon.svg" />
-                  <p class="body1">200000000</p>
+                  <p class="body1">200,000,000</p>
                 </div>
               </li>
               <li>
