--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -16,10 +16,10 @@
                     <a href="#ecodona">ecodona</a>
                 </div>
                 <div class="info">
-                    <a href="#homepage"><h5>Overview</h5></a>
-                    <a href="#"><h5>How it Works</h5></a>
-                    <a href="#"><h5>Tax Deduction</h5></a>
-                    <button type="button" class="signbtn">Sign In</button>
+                    <a href="homepage.html"><h5>Overview</h5></a>
+                    <a href="howitworks.html"><h5>How it Works</h5></a>
+                    <a href="educationpage.html"><h5>Tax Deduction</h5></a>
+                    <a href="login.html" class="signbtn">Sign In</a>
                 </div>
             </div>
         </nav>
