--- a/pages/educationpage.html
+++ b/pages/educationpage.html
@@ -16,10 +16,10 @@
                     <a href="#ecodona">ecodona</a>
                 </div>
                 <div class="info">
-                    <a href="#homepage"><h5>Overview</h5></a>
-                    <a href="#"><h5>How it Works</h5></a>
-                    <a href="#"><h5>Tax Deduction</h5></a>
-                    <button type="button" class="signbtn">Sign In</button>
+                    <a href="homepage.html"><h5>Overview</h5></a>
+                    <a href="howitworks.html"><h5>How it Works</h5></a>
+                    <a href="educationpage.html"><h5>Tax Deduction</h5></a>
+                    <a href="login.html" class="signbtn">Sign In</a>
                 </div>
             </div>
         </nav>
@@ -60,18 +60,15 @@
        </div>
 
        <footer>
-        <div class="footercontent">
-            <div class="left">
-                <p>©2022 ecodona. All rights reserved.</p>
-                <p>Privacy policy </p>
-                <p>Terms of service</p>
-            </div>
-
-            <div class="right">
-                <img src = "../images/icons/logo-instagram.svg" alt="My Happy SVG"/>
-                <img src = "../images/icons/logo-facebook.svg" alt="My Happy SVG"/>
-                <img src = "../images/icons/logo-twitter.svg" alt="My Happy SVG"/>
-            </div>
+        <div class="left">
+            <p>©2022 ecodona. All rights reserved.</p>
+            <p>Privacy policy </p>
+            <p>Terms of service</p>
+        </div>
+        <div class="right">
+            <img src = "../images/icons/logo-instagram.svg" alt="My Happy SVG"/>
+            <img src = "../images/icons/logo-facebook.svg" alt="My Happy SVG"/>
+            <img src = "../images/icons/logo-twitter.svg" alt="My Happy SVG"/>
         </div>
     </footer>
     </body>
