--- a/pages/educationpage.html
+++ b/pages/educationpage.html
@@ -60,15 +60,18 @@
        </div>
 
        <footer>
-        <div class="left">
-            <p>©2022 ecodona. All rights reserved.</p>
-            <p>Privacy policy </p>
-            <p>Terms of service</p>
-        </div>
-        <div class="right">
-            <img src = "../images/icons/logo-instagram.svg" alt="My Happy SVG"/>
-            <img src = "../images/icons/logo-facebook.svg" alt="My Happy SVG"/>
-            <img src = "../images/icons/logo-twitter.svg" alt="My Happy SVG"/>
+        <div class="footercontent">
+            <div class="left">
+                <p>©2022 ecodona. All rights reserved.</p>
+                <p>Privacy policy </p>
+                <p>Terms of service</p>
+            </div>
+
+            <div class="right">
+                <img src = "../images/icons/logo-instagram.svg" alt="My Happy SVG"/>
+                <img src = "../images/icons/logo-facebook.svg" alt="My Happy SVG"/>
+                <img src = "../images/icons/logo-twitter.svg" alt="My Happy SVG"/>
+            </div>
         </div>
     </footer>
     </body>
