--- a/pages/rewards.html
+++ b/pages/rewards.html
@@ -45,7 +45,7 @@
               <h3>My Rewards</h3>
             </div>
             <div class="reward">
-              <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
+              <img src="../images/cathy.png" class="reward-img">
               <div>
                 <h3>Eye Watch Milestone 2</h3>
                 <p class="body10">Phone Case</p>
@@ -54,7 +54,7 @@
               <img src="../images/icons/rightarrow.png" class="reward-arrow">
             </div>
             <div class="reward">
-              <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
+              <img src="../images/cathy.png" class="reward-img">
               <div>
                 <h3>water.org Milestone 1</h3>
                 <p class="body10">water.org Hydroflask</p>
@@ -63,7 +63,7 @@
               <img src="../images/icons/rightarrow.png" class="reward-arrow">
             </div>
             <div class="reward">
-              <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
+              <img src="../images/cathy.png" class="reward-img">
               <div>
                 <h3>Sustains Milestone 3</h3>
                 <p class="body10">Squash Seeds</p>
@@ -72,7 +72,7 @@
               <img src="../images/icons/rightarrow.png" class="reward-arrow">
             </div>
             <div class="reward">
-              <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
+              <img src="../images/cathy.png" class="reward-img">
               <div>
                 <h3>Educate! Milestone 5</h3>
                 <p class="body10">Keychron MX Switch</p>
@@ -81,7 +81,7 @@
               <img src="../images/icons/rightarrow.png" class="reward-arrow">
             </div>
             <div class="reward">
-              <img src="TODO: ../images/reward_images/reward.png" class="reward-img">
+              <img src="../images/cathy.png" class="reward-img">
               <div>
                 <h3>SoilEarth Milestone 5</h3>
                 <p class="body10">Gardening Gloves</p>
