--- a/pages/upload.html
+++ b/pages/upload.html
@@ -39,12 +39,12 @@
           </li>
         </ul>
       </div>
-        <section class="content">
+        <section class="upload-content">
           <h3>Upload Your Receipt</h3>
             <div class="upload-wrapper">
                 <img src="../images/icons/upload-icon.png">
                 <p class="body2">We only accept files of the .pdf format.</p>
-                <button type="button" class="uploadbtn">Upload</button>
+                <button type="button" class="secondaryblk">Upload</button>
             </div>
         </section>
         
