--- a/pages/login.html
+++ b/pages/login.html
@@ -9,20 +9,43 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/session.css">
+    <link rel="stylesheet" href="../css/nonuserpgs.css">
   </head>
   <body>
-    <h1>Sign In</h1>
-    <form action="PHP/login.php" method="POST">
-      <label for="email">Email:</label><br />
-      <input type="text" id="email" name="email" /><br />
-      <label for="password">Password:</label><br />
-      <input type="text" id="password" name="password" /><br /><br />
-      <input type="submit" value="Sign In" />
-    </form>
-    <p>
-      Don't have an account with us?
-      <a href="register.html">Create an account</a>
-    </p>
+
+    <nav>
+      <div class="wrapper">
+          <div class="logo">
+              <a href="#ecodona">ecodona</a>
+          </div>
+          <div class="info">
+              <a href="homepage.html"><h5>Overview</h5></a>
+              <a href="howitworks.html"><h5>How it Works</h5></a>
+              <a href="educationpage.html"><h5>Tax Deduction</h5></a>
+              <a href="login.html" class="signbtn">Sign In</a>
+          </div>
+      </div>
+    </nav>
+
+    <div class="content">
+      <div class="lefttext">
+        <h2 id="sign">Sign In</h2>
+  
+        <form action="PHP/login.php" method="POST">
+          <input type="text" id="email" name="email" placeholder="Email" /><br />
+          <input type="text" id="password" name="password" placeholder="Password" /><br /><br />
+          <input type="submit" value="Sign In" class="bigroundbtn" />
+        </form>
+    
+        <p>
+          Don't have an account with us?
+          <a href="register.html">Create an account</a>
+        </p>  
+      </div>
+
+      <img src="../images/icons/signright.png" alt="sign">
+    </div>
+    
+
   </body>
 </html>
