--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="wrapper">
                 <div class="logo">
-                    <a href="#ecodona">ecodona</a>
+                    <a href="homepage.html">ecodona</a>
                 </div>
                 <div class="info">
                     <a href="homepage.html"><h5>Overview</h5></a>
