--- a/pages/upload.html
+++ b/pages/upload.html
@@ -45,6 +45,7 @@
                 <img src="../images/icons/upload-icon.png">
                 <p class="body2">We only accept files of the .pdf format.</p>
                 <button type="button" class="secondaryblk">Upload</button>
+                <input type="file" accept="application/pdf">
             </div>
         </section>
         
