--- a/pages/charity.html
+++ b/pages/charity.html
@@ -16,99 +16,103 @@
     </head>
     <body>
       <div class="side-nav">
+        <div class="logo">
+          <a href="dashboard.html">ecodona</a>
+        </div>
         <ul>
           <li>
-            <img src="../images/icons/user-dashboard.png">
             <a href = "dashboard.html"><h5>Dashboard</h5></a>
           </li>
           <li>
-            <img src="../images/icons/user-upload.png">
             <a href = "upload.html" ><h5>Upload Receipts</h5></a>
           </li>
           <li>
-            <img src="../images/icons/user-donate.png">
             <a href = "charity.html"><h5>Donate Donuts</h5></a>
           </li>
           <li>
-            <img src="../images/icons/user-award.png">
             <a href = "rewards.html"><h5>My Rewards</h5></a>
           </li>
           <li>
-            <img src="../images/icons/user-profile.png">
             <a href = "PHP/profile.php"><h5>Profile</h5></a>
           </li>
         </ul>
       </div>
-      </div>
-        <section id="content">
+      
+      <section class="content">
+        <div class="charities-wrapper">
           <div class="intro">
             <h3>Donate Your Donuts</h3>
           </div>
-          <div class="charities-wrapper">
-            <div class="card">
+          <div class="charity-cards-wrapper">
+            <div class="charity-card">
               <div class="card-img">
-                <img src="TODO: ../images/charity_images/img.png">
+                <img src="../images/charity_images/charity.jpg">
               </div>
-              <div class="h8">
-                Human Watch Rights
-              </div>
-              <p class="body2">
-                An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
-              </p>
-              <div class="card-btns">
-                <button type="button" class="primarybtn">Donate</button>
-                <button type="button" class="secondarybtn">Details</button>
+              <div class="card-content">
+                <div class="h8">
+                  Human Watch Rights
+                </div>
+                <p class="body2">
+                  An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
+                </p>
+                <div class="card-btns">
+                  <button type="button" class="primarygr">Donate</button>
+                  <button type="button" class="secondarygr">Details</button>
+                </div>
               </div>
             </div>
-            <div class="card">
+            <div class="charity-card">
               <div class="card-img">
-                <img src="TODO: ../images/charity_images/img.png">
+                <img src="../images/charity_images/charity.jpg">
               </div>
-              <div class="h8">
-                Human Watch Rights
-              </div>
-              <p class="body2">
-                An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
-              </p>
-              <div class="card-btns">
-                <button type="button" class="primarybtn">Donate</button>
-                <button type="button" class="secondarybtn">Details</button>
+              <div class="card-content">
+                <div class="h8">
+                  Human Watch Rights
+                </div>
+                <p class="body2">
+                  An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
+                </p>
+                <div class="card-btns">
+                  <button type="button" class="primarygr">Donate</button>
+                  <button type="button" class="secondarygr">Details</button>
+                </div>
               </div>
             </div>
-            <div class="card">
+            <div class="charity-card">
               <div class="card-img">
-                <img src="TODO: ../images/charity_images/img.png">
+                <img src="../images/charity_images/charity.jpg">
               </div>
-              <div class="h8">
-                Human Watch Rights
-              </div>
-              <p class="body2">
-                An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
-              </p>
-              <div class="card-btns">
-                <button type="button" class="primarybtn">Donate</button>
-                <button type="button" class="secondarybtn">Details</button>
+              <div class="card-content">
+                <div class="h8">
+                  Human Watch Rights
+                </div>
+                <p class="body2">
+                  An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
+                </p>
+                <div class="card-btns">
+                  <button type="button" class="primarygr">Donate</button>
+                  <button type="button" class="secondarygr">Details</button>
+                </div>
               </div>
             </div>
-            <div class="card">
+            <div class="charity-card">
               <div class="card-img">
-                <img src="TODO: ../images/charity_images/img.png">
+                <img src="../images/charity_images/charity.jpg">
               </div>
-              <div class="h8">
-                Human Watch Rights
-              </div>
-              <p class="body2">
-                An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
-              </p>
-              <div class="card-btns">
-                <button type="button" class="primarybtn">Donate</button>
-                <button type="button" class="secondarybtn">Details</button>
+              <div class="card-content">
+                <div class="h8">
+                  Human Watch Rights
+                </div>
+                <p class="body2">
+                  An organization dedicated to the betterment of human quality of life as it pertains to natural human rights. Fighting for a just cause in supporting human rights essential to well being.
+                </p>
+                <div class="card-btns">
+                  <button type="button" class="primarygr">Donate</button>
+                  <button type="button" class="secondarygr">Details</button>
+                </div>
               </div>
             </div>
           </div>
-        </section>
-        <footer>
-
-        </footer>
+      </section>
     </body>
 </html>
