--- a/pages/rewards.html
+++ b/pages/rewards.html
@@ -16,25 +16,23 @@
     </head>
     <body>
       <div class="side-nav">
+        <div class="logo">
+          <a href="dashboard.html">ecodona</a>
+        </div>
         <ul>
           <li>
-            <img src="../images/icons/user-dashboard.png">
             <a href = "dashboard.html"><h5>Dashboard</h5></a>
           </li>
           <li>
-            <img src="../images/icons/user-upload.png">
             <a href = "upload.html" ><h5>Upload Receipts</h5></a>
           </li>
           <li>
-            <img src="../images/icons/user-donate.png">
             <a href = "charity.html"><h5>Donate Donuts</h5></a>
           </li>
           <li>
-            <img src="../images/icons/user-award.png">
             <a href = "rewards.html"><h5>My Rewards</h5></a>
           </li>
           <li>
-            <img src="../images/icons/user-profile.png">
             <a href = "PHP/profile.php"><h5>Profile</h5></a>
           </li>
         </ul>
