--- a/pages/login.html
+++ b/pages/login.html
@@ -33,7 +33,7 @@
   
         <form action="PHP/login.php" method="POST">
           <input type="text" id="email" name="email" placeholder="Email" /><br />
-          <input type="text" id="password" name="password" placeholder="Password" /><br /><br />
+          <input type="password" id="password" name="password" placeholder="Password" /><br /><br />
           <input type="submit" value="Sign In" class="bigroundbtn" />
         </form>
     
